# OpenGL_Tests

./: CMakeLists.txt
01_hello_window/: main.cpp  pch.hpp
02_hello_triangle/: main.cpp  pch.hpp  shader.cpp  shader.hpp
02_hello_triangle/shaders/: fragment.frag  geometry.geom  vertex.vert
03_texture/: main.cpp  shader.cpp
03_texture/shaders/: vertex.vert
04_trans/: main.cpp  texture.cpp
